<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewBackground"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".UI.MainActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/dhaka_polytechnic_institute"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingVertical="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText

                android:id="@+id/reg_emil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_background"
                android:hint="@string/type_your_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/reg_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_background"
                android:hint="@string/type_your_password"
                android:importantForAutofill="no"
                android:inputType="textWebPassword"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

            <Button
                android:id="@+id/btn_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_background"
                android:text="@string/create_one" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/already_have_an_account_log_in"
        android:textColor="@color/purple_500"
        android:visibility="gone" />

    <androidx.cardview.widget.CardView
        android:id="@+id/Layout_logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingVertical="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/log_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_background"
                android:hint="@string/type_your_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/log_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_background"
                android:hint="@string/type_your_password"
                android:importantForAutofill="no"
                android:inputType="textWebPassword"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

            <Button
                android:id="@+id/btn_logIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_background"
                android:text="@string/log_in" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/create_new_account"
        android:textColor="@color/purple_500" />


</LinearLayout>