<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewBackground"
    tools:context=".Fragment.ProfileFragment">


    <LinearLayout
        android:id="@+id/layout_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/dot"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_dep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dot"
            android:textColor="@color/colorTextTitle"
            android:textSize="16sp"
            android:textStyle="italic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorTextLight" />

        <TextView
            android:id="@+id/tv_roll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/dot"
            android:textColor="@color/colorTextTitle"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/dot"
            android:textColor="@color/colorTextTitle"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/dot"
            android:textColor="@color/colorTextTitle"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_logOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/log_out" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/layout_profile"
        app:layout_constraintEnd_toEndOf="@+id/layout_profile"
        app:layout_constraintStart_toStartOf="@+id/layout_profile"
        app:layout_constraintTop_toTopOf="@+id/layout_profile" />


</androidx.constraintlayout.widget.ConstraintLayout>